template-for-repository/negative_tests/signed_underflow_check/signed_underflow_check_harness.c
/**
 * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 * SPDX-License-Identifier: MIT-0.
 */

/**
 * A negative test for --signed-overflow-check flag
 */
void signed_underflow_check_harness() {
    int underflow, offset;
    underflow -= offset;
}
